<resources>
    <string name="app_name" translatable="false">Homework-2</string>
    <string name="add_product_name">Product name</string>
    <string name="add_description">Description</string>
    <string name="add_image_link">Image link</string>
    <string name="add_price">Price</string>
    <string name="add_product">Add product</string>
    <string name="loading_error">Loading error</string>
    <string name="add_product_success">Product added successfully</string>
    <string name="fill_all_strokes">Fill all strokes</string>
</resources>